# VkFFTCUDALib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: vkfft_cuda.cuh
src/: vkfft_cuda.cu
